src/objects/Offer__c.object
<CustomObject>
    <description>Defines offers (currently only Zuora offers).</description>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if subscription using this offer should auto-renew with term expiry.</description>
        <inlineHelpText>Defines if subscription using this offer should auto-renew with term expiry.</inlineHelpText>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <description>Base monthly price for digital (Zuora) subscription.</description>
        <inlineHelpText>Base monthly price for digital (Zuora) subscription.</inlineHelpText>
        <label>Base Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description for the Offer.</description>
        <inlineHelpText>Description for the Offer.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Duration__c</fullName>
        <description>Amount of billing periods for which the discount should be applicable.</description>
        <inlineHelpText>Amount of billing periods for which the discount should be applicable.</inlineHelpText>
        <label>Discount Duration</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount that should be applicable for the subscription.</description>
        <inlineHelpText>Discount that should be applicable for the subscription.</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Free_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if this offer is a free trial one.</description>
        <inlineHelpText>Defines if this offer is a free trial one.</inlineHelpText>
        <label>Free Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency of payment for the subscription.</description>
        <inlineHelpText>Frequency of payment for the subscription.</inlineHelpText>
        <label>Frequency</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ZOffer_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Friendly_Name__c</fullName>
        <description>Offer friendly name.</description>
        <inlineHelpText>Offer friendly name.</inlineHelpText>
        <label>Friendly Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Price__c</fullName>
        <description>Pay Pal initial price. Value used for PayPal transactions. Resulting from different price calculation.</description>
        <inlineHelpText>Pay Pal initial price. Value used for PayPal transactions. Resulting from different price calculation.</inlineHelpText>
        <label>PayPal Initial Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Term_Type__c</fullName>
        <description>Frequency of initial term.</description>
        <inlineHelpText>Frequency of initial term.</inlineHelpText>
        <label>Initial Term Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ZOffer_Term_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Term__c</fullName>
        <description>Defines subscription initial term.</description>
        <inlineHelpText>Defines subscription initial term.</inlineHelpText>
        <label>Initial Term</label>
        <precision>16</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if offer is restricted to single use in specific time.</description>
        <inlineHelpText>Defines if offer is restricted to single use in specific time.</inlineHelpText>
        <label>Is Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>Description passed to PayPal for the offer sold.</description>
        <inlineHelpText>Description passed to PayPal for the offer sold.</inlineHelpText>
        <label>PayPal Item Description</label>
        <length>127</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines main offer for free trial/restricted offers.</description>
        <inlineHelpText>Defines main offer for free trial/restricted offers.</inlineHelpText>
        <label>Main Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Name_Uniqueness__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Added to make sure offer name is unique.</description>
        <label>Offer Name Uniqueness</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Renewal_Term_Type__c</fullName>
        <description>Frequency of renewal term.</description>
        <inlineHelpText>Frequency of renewal term.</inlineHelpText>
        <label>Renewal Term Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ZOffer_Term_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <description>Defines subscription renewal term.</description>
        <inlineHelpText>Defines subscription renewal term.</inlineHelpText>
        <label>Renewal Term</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Description__c</fullName>
        <label>Sub Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekly_Advertised_Price__c</fullName>
        <label>Weekly Advertised Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ZProduct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Zuora Product</description>
        <inlineHelpText>Zuora Product</inlineHelpText>
        <label>ZProduct</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>Offers</relationshipLabel>
        <relationshipName>Offers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Offer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ZProduct__c</columns>
        <columns>Base_Price__c</columns>
        <columns>Frequency__c</columns>
        <columns>Friendly_Name__c</columns>
        <columns>Name__c</columns>
        <columns>Description__c</columns>
        <columns>Initial_Term__c</columns>
        <columns>Initial_Term_Type__c</columns>
        <columns>Main_Offer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Restricted</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Restricted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Free_Trial__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Restricted</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Both_discount_parameters_populated</fullName>
        <active>true</active>
        <description>Both discount parameters have to be populated.</description>
        <errorConditionFormula>OR( 
AND(ISBLANK(Discount__c), NOT(ISBLANK(Discount_Duration__c))), 
AND(ISBLANK(Discount_Duration__c), NOT(ISBLANK(Discount__c))) 
)</errorConditionFormula>
        <errorMessage>Both discount parameters have to be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Child_offer_cannot_be_a_parent</fullName>
        <active>true</active>
        <description>Offers that have Main Offer field populated cannot be set as main offer.</description>
        <errorConditionFormula>NOT(ISBLANK(Main_Offer__r.Main_Offer__c))</errorConditionFormula>
        <errorDisplayField>Main_Offer__c</errorDisplayField>
        <errorMessage>You cannot select an offer that already has the Main Offer field populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Child_offer_partial_match_parent</fullName>
        <active>true</active>
        <description>Parents&apos; product and frequency have to match the child details.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(Main_Offer__c)),  OR(ZProduct__c !=  Main_Offer__r.ZProduct__c, TEXT(Frequency__c) != TEXT(Main_Offer__r.Frequency__c)))</errorConditionFormula>
        <errorMessage>Frequency and product have to be same as for the main offer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Initial_Price_Greater_than_Zero</fullName>
        <active>true</active>
        <description>Ititial_Price__c (PayPal Initial Price) has to be greater or equal to zero.</description>
        <errorConditionFormula>OR(Initial_Price__c == null, Initial_Price__c &lt; 0)</errorConditionFormula>
        <errorDisplayField>Initial_Price__c</errorDisplayField>
        <errorMessage>Initial Price has to be greater or equal to zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Main_offer_required_for_promotions</fullName>
        <active>true</active>
        <description>Main offer is required for offers that are restricted or free trial.</description>
        <errorConditionFormula>AND(
 OR(Is_Restricted__c, Free_Trial__c),
 OR(ISBLANK(Main_Offer__c), 
   AND(NOT(ISBLANK(Main_Offer__c)), NOT(CONTAINS(Name, Main_Offer__r.Name)))
 )
)</errorConditionFormula>
        <errorDisplayField>Main_Offer__c</errorDisplayField>
        <errorMessage>Main offer is required for offers that are restricted or free trial. Name of child offer has to contain parent offer name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_pattern_validation</fullName>
        <active>true</active>
        <description>Offer name can only consist of hyphen concatenated words. This is to match offers naming pattern after the migration. Later on, hopefully, the validation rule can be disabled.</description>
        <errorConditionFormula>NOT(REGEX(Name, &quot;\\b(\\w*[-&apos;.]\\w*)+\\b&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Offer name can only consist of hyphen concatenated words.</errorMessage>
    </validationRules>
</CustomObject>